--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -1,20 +1,21 @@
-name: Mirror Repo
+name: Mirror to JeiHyde25
 
 on:
   push:
     branches:
-      - main
+      - main  # change this if you're using another default branch
 
 jobs:
   mirror:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout the repo
+      - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Push to mirror
+      - name: Mirror push to JeiHyde25 repo
         run: |
-          git config --global user.nama 'github-actions'
-          git config --global user.email 'github-actions@github.com'
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
           git remote add mirror https://$GITHUB_ACTOR:${{ secrets.TOKEN }}@github.com/JeiHyde25/JeiHyde25.git
           git push --mirror mirror
