--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -19,5 +19,5 @@ jobs:
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-          git remote add mirror https://JeiHyde25:${{ secrets.TOKEN }}@github.com/JeiHyde25/JeiHyde25.git
+          git remote add mirror https://x-access-token:${{ secrets.TOKEN }}@github.com/JeiHyde25/JeiHyde25.git
           git push --mirror mirror
