--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -22,5 +22,7 @@ jobs:
           git remote add mirror https://x-access-token:${{ secrets.TOKEN }}@github.com/JeiHyde25/JeiHyde25.git
           git remote -v
           git config --get remote.mirror.url
-          git push --mirror mirror 
-        # test
+          echo "Token begins with: ${TOKEN:0:4}"
+          git push --mirror mirror
+        env:
+          TOKEN: ${{ secrets.TOKEN }}
