--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -19,7 +19,8 @@ jobs:
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-          git remote add mirror https://x-access-token:${TOKEN}@github.com/JeiHyde25/JeiHyde25.git          git remote -v
+          git remote add mirror https://x-access-token:${TOKEN}@github.com/JeiHyde25/JeiHyde25.git
+          git remote -v
           git config --get remote.mirror.url
           echo "Token begins with: ${TOKEN:0:4}"
           git push --mirror mirror
