--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -3,26 +3,23 @@ name: Mirror to JeiHyde25
 on:
   push:
     branches:
-      - main  # Update if your branch name differs
+      - main
 
 jobs:
   mirror:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout source repository
         uses: actions/checkout@v3
         with:
-          fetch-depth: 0  # Ensure full history is available
+          fetch-depth: 0
 
-      - name: Mirror push to JeiHyde25 repo
+      - name: Push to mirror repository
+        env:
+          TOKEN: ${{ secrets.TOKEN }}
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
           git remote add mirror https://x-access-token:${TOKEN}@github.com/JeiHyde25/JeiHyde25.git
-          git remote -v
-          git config --get remote.mirror.url
-          echo "Token begins with: ${TOKEN}"
           git push --mirror mirror
-        env:
-          TOKEN: ${{ secrets.TOKEN }}
