--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -21,5 +21,6 @@ jobs:
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
+          echo ${TOKEN}
           git remote add mirror https://x-access-token:${TOKEN}@github.com/JeiHyde25/JeiHyde25.git
           git push --mirror mirror
