--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -22,5 +22,4 @@ jobs:
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
           echo "Injected token is: $TOKEN"
-          git remote add mirror https://x-access-token:${TOKEN}@github.com/JeiHyde25/JeiHyde25.git
-          git push --mirror mirror
+          git push --mirror https://x-access-token:${TOKEN}@github.com/JeiHyde25/JeiHyde25.git
