--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -21,5 +21,7 @@ jobs:
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-          echo "Injected token is: $TOKEN"
-          git push --mirror https://x-access-token:${TOKEN}@github.com/JeiHyde25/JeiHyde25.git
+          git clone --mirror https://x-access-token:${TOKEN}@github.com/JeiHyde25/jeihyde-proj.git temp-repo
+          cd temp-repo
+          git remote set-url origin https://x-access-token:${TOKEN}@github.com/JeiHyde25/JeiHyde25.git
+          git push --mirror
